--- a/DotNet/MainWindow.xaml
+++ b/DotNet/MainWindow.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="DotNet.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DotNet"
+        xmlns:Compatible="clr-namespace:System.Windows.Controls.DataVisualization.Charting.Compatible;assembly=System.Windows.Controls.DataVisualization.Toolkit" xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit" x:Class="DotNet.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
@@ -16,13 +17,12 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
         <DatePicker HorizontalAlignment="Left" VerticalAlignment="Top" Margin="33,91,0,0" Width="120" />
-        <TextBox Name ="StrikeBox" HorizontalAlignment="Left" Height="22"  Margin="199,42,0,0" TextWrapping="Wrap" Text="Strike" VerticalAlignment="Top" Width="110" TextChanged="TextBox_TextChanged" />
+        <TextBox x:Name ="StrikeBox" HorizontalAlignment="Left" Height="22"  Margin="199,42,0,0" TextWrapping="Wrap" Text="Strike" VerticalAlignment="Top" Width="110" TextChanged="TextBox_TextChanged" />
         <DatePicker HorizontalAlignment="Left" Margin="340,42,0,0" VerticalAlignment="Top" Width="106"/>
         <ComboBox HorizontalAlignment="Left" Margin="199,91,0,0" VerticalAlignment="Top" Width="120"/>
         <DatePicker HorizontalAlignment="Left" Margin="340,91,0,0" VerticalAlignment="Top" Width="106"/>
         <TextBlock HorizontalAlignment="Left" Margin="340,227,0,0" TextWrapping="Wrap" Text="Payoff :" VerticalAlignment="Top" Width="63"/>
         <TextBlock HorizontalAlignment="Left" Margin="340,262,0,0" TextWrapping="Wrap" Text="Hedge :" VerticalAlignment="Top" Width="93"/>
         <TextBlock HorizontalAlignment="Left" Margin="340,296,0,0" TextWrapping="Wrap" Text="Price option :" VerticalAlignment="Top" Width="93" RenderTransformOrigin="0.491,1.988"/>
-
     </Grid>
 </Window>
