--- a/DotNet/Visualization/GraphVisualization.xaml
+++ b/DotNet/Visualization/GraphVisualization.xaml
@@ -7,10 +7,14 @@
                  mc:Ignorable="d" 
                  d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="Right" >
-            <TextBox HorizontalAlignment="Left" Height="23" Margin="62,60,0,0" TextWrapping="Wrap" Text="hello" VerticalAlignment="Top" Width="120"/>
-
-        </lvc:CartesianChart>
+      <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="Right" >
+        <lvc:CartesianChart.AxisY>
+          <lvc:Axis Title="Value" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
+        </lvc:CartesianChart.AxisY>
+        <lvc:CartesianChart.AxisX>
+          <lvc:Axis Title="Date" Labels="{Binding Labels}"></lvc:Axis>
+        </lvc:CartesianChart.AxisX>
+      </lvc:CartesianChart>
         
     </Grid>
 </UserControl>
