--- a/DotNet/Visualization/GraphVisualization.xaml
+++ b/DotNet/Visualization/GraphVisualization.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DotNet.Visualization.GraphVisualization"
+﻿<Window x:Class="DotNet.Visualization.GraphVisualization"
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -17,4 +17,4 @@
       </lvc:CartesianChart>
         
     </Grid>
-</UserControl>
+</Window>
