--- a/DotNet/GraphDictionnary.xaml
+++ b/DotNet/GraphDictionnary.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:models="clr-namespace:DotNet"
+                    xmlns:models="clr-namespace:DotNet.Models"
                     xmlns:desc="clr-namespace:DotNet.Visualization">
     <DataTemplate DataType="{x:Type models:Graph}">
         <desc:GraphVisualization />
