--- a/DotNet/MainWindow.xaml
+++ b/DotNet/MainWindow.xaml
@@ -26,20 +26,12 @@
         <TextBox x:Name ="StrikeBox" HorizontalAlignment="Left" Height="22"  Margin="199,42,0,0" TextWrapping="Wrap" Text="{Binding strike}" VerticalAlignment="Top" Width="110" TextChanged="TextBox_TextChanged" />
         <DatePicker Name="DateMaturity" HorizontalAlignment="Left" Margin="340,42,0,0" VerticalAlignment="Top" Width="106"  SelectedDate="{Binding maturity}"/>
         <ComboBox HorizontalAlignment="Left" Margin="199,91,0,0" VerticalAlignment="Top" Width="120"/>
-        <DatePicker Name="DateEstimation" HorizontalAlignment="Left" Margin="340,91,0,0" VerticalAlignment="Top" Width="106" />
+        <TextBox Name="NbJoursEstimation" HorizontalAlignment="Left" Margin="340,91,0,0" VerticalAlignment="Top" Text="{Binding nbDaysEstim}" Width="106" />
         <TextBlock Name ="PayoffBlock" HorizontalAlignment="Left" Margin="340,227,0,0" TextWrapping="Wrap" Text="Payoff :" VerticalAlignment="Top" Width="63"/>
         <TextBlock Name ="HedgeBlock" HorizontalAlignment="Left" Margin="340,262,0,0" TextWrapping="Wrap" Text="Hedge :" VerticalAlignment="Top" Width="93"/>
         <TextBlock Name="PriceBlock" HorizontalAlignment="Left" Margin="340,296,0,0" TextWrapping="Wrap" Text="Price option :" VerticalAlignment="Top" Width="93" RenderTransformOrigin="0.491,1.988"/>
         <TextBlock Name="PayoffValue" HorizontalAlignment="Left" Margin="403,227,0,0" TextWrapping="Wrap" Text="{Binding payOffValue}" VerticalAlignment="Top"/>
         <TextBlock Name="HedgeValue" HorizontalAlignment="Left" Margin="403,262,0,0" TextWrapping="Wrap" Text="{Binding hedgeValue}" VerticalAlignment="Top"/>
         <TextBlock Name="PriceValue" HorizontalAlignment="Left" Margin="433,299,0,0" TextWrapping="Wrap" Text="{Binding price}" VerticalAlignment="Top"/>
-        <ListBox HorizontalAlignment="Left" Height="33" Margin="33,226,0,0" VerticalAlignment="Top" Width="159" ItemsSource="{Binding AvailableClasses}" SelectedItem="{Binding SelectedClasses}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Name}" />
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <ContentControl Grid.Column="1" Content="{Binding SelectedClasses}" />
     </Grid>
 </Window>
