--- a/DotNet/MainWindow.xaml
+++ b/DotNet/MainWindow.xaml
@@ -14,7 +14,7 @@
         </ResourceDictionary>
     </Window.Resources>
     <Grid Margin="0,0,-8,-20">
-        <Button Command="{Binding StartCommand}" Content="Start" HorizontalAlignment="Left" Margin="707,204,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Command="{Binding StartCommand}" Content="StartSimulation" HorizontalAlignment="Left" Margin="616,162,0,0" VerticalAlignment="Top" Width="131" RenderTransformOrigin="-1.067,-1.682"/>
         <ComboBox HorizontalAlignment="Left" Margin="33,42,0,0" VerticalAlignment="Top" Width="120" ItemsSource="{Binding AvailableOptions}">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
@@ -23,10 +23,10 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
         <DatePicker Name="DateDebutTest" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="33,91,0,0" Width="120" SelectedDate="{Binding UniverseVM.Initializer.DebutTest, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBox x:Name ="StrikeBox" HorizontalAlignment="Left" Height="22"  Margin="199,42,0,0" TextWrapping="Wrap" Text="{Binding strike}" VerticalAlignment="Top" Width="110" TextChanged="TextBox_TextChanged" />
+        <TextBox x:Name ="StrikeBox" HorizontalAlignment="Left" Height="22"  Margin="199,42,0,0" TextWrapping="Wrap" Text="{Binding UniverseVM.Initializer.Strike }" VerticalAlignment="Top" Width="110" TextChanged="TextBox_TextChanged" />
         <DatePicker Name="DateMaturity" HorizontalAlignment="Left" Margin="340,42,0,0" VerticalAlignment="Top" Width="106"  SelectedDate="{Binding maturity}"/>
         <ComboBox HorizontalAlignment="Left" Margin="199,91,0,0" VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="NbJoursEstimation" HorizontalAlignment="Left" Margin="340,91,0,0" VerticalAlignment="Top" Text="{Binding nbDaysEstim}" Width="106" TextChanged="NbJoursEstimation_TextChanged" />
+        <TextBox Name="NbJoursEstimation" HorizontalAlignment="Left" Margin="340,91,0,0" VerticalAlignment="Top" Text="{Binding UniverseVM.Initializer.PlageEstimation}" Width="106" TextChanged="NbJoursEstimation_TextChanged" />
         <TextBlock Name ="PayoffBlock" HorizontalAlignment="Left" Margin="340,227,0,0" TextWrapping="Wrap" Text="Payoff :" VerticalAlignment="Top" Width="63"/>
         <TextBlock Name ="HedgeBlock" HorizontalAlignment="Left" Margin="340,262,0,0" TextWrapping="Wrap" Text="Hedge :" VerticalAlignment="Top" Width="93"/>
         <TextBlock Name="PriceBlock" HorizontalAlignment="Left" Margin="340,296,0,0" TextWrapping="Wrap" Text="Price option :" VerticalAlignment="Top" Width="93" RenderTransformOrigin="0.491,1.988"/>
