--- a/DotNet/Visualization/GraphVisualization.xaml
+++ b/DotNet/Visualization/GraphVisualization.xaml
@@ -5,7 +5,8 @@
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
                  xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
                  mc:Ignorable="d" 
-                 d:DesignHeight="300" d:DesignWidth="300">
+                 d:DesignHeight="300" d:DesignWidth="300"
+                   Title="Hedge portfolio value VS Option price">
     <Grid>
       <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="Right" >
         <lvc:CartesianChart.AxisY>
